[project]
name = "onboarding-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "langchain>=1.2.7",
    "langchain-core>=1.2.7",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.6",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "python-dotenv>=1.2.1",
    "langchain-classic>=1.0.1",
    "alembic>=1.18.1",
    "aiosqlite>=0.22.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
